# Pixel-Canvas

./: .gitignore  CMakeLists.txt  README.md
framework/: CMakeLists.txt  ScreenQuad.cpp  ScreenQuad.hpp  color.hpp  cube.cpp  cube.hpp  data_types_fwd.hpp  fensterchen.hpp  imgui_impl_glfw_gl3.cpp  plane.cpp  plane.hpp  texture_loader.cpp  texture_loader.hpp  transfer_function.cpp  transfer_function.hpp  turntable.hpp  utils.cpp  utils.hpp  volume_loader_raw.cpp  volume_loader_raw.hpp  window.cpp  window.hpp
source/: CMakeLists.txt  Canvas.cpp  Canvas.h  pixel_canvas.cpp  ray_casting.cpp
source/shader/: image_display.frag  image_display.vert  pass_through_GUI.frag  pass_through_GUI.vert  ray_casting.frag  ray_casting.vert  wirenet.frag  wirenet.vert
